initial web app code

--- a/main.ipynb
+++ b/main.ipynb
@@ -111,14 +111,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "cfef3b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/embedding-gecko-001\n",
+      "models/gemini-2.5-pro-preview-03-25\n",
+      "models/gemini-2.5-flash-preview-05-20\n",
+      "models/gemini-2.5-flash\n",
+      "models/gemini-2.5-flash-lite-preview-06-17\n",
+      "models/gemini-2.5-pro-preview-05-06\n",
+      "models/gemini-2.5-pro-preview-06-05\n",
+      "models/gemini-2.5-pro\n",
+      "models/gemini-2.0-flash-exp\n",
+      "models/gemini-2.0-flash\n",
+      "models/gemini-2.0-flash-001\n",
+      "models/gemini-2.0-flash-exp-image-generation\n",
+      "models/gemini-2.0-flash-lite-001\n",
+      "models/gemini-2.0-flash-lite\n",
+      "models/gemini-2.0-flash-lite-preview-02-05\n",
+      "models/gemini-2.0-flash-lite-preview\n",
+      "models/gemini-2.0-pro-exp\n",
+      "models/gemini-2.0-pro-exp-02-05\n",
+      "models/gemini-exp-1206\n",
+      "models/gemini-2.0-flash-thinking-exp-01-21\n",
+      "models/gemini-2.0-flash-thinking-exp\n",
+      "models/gemini-2.0-flash-thinking-exp-1219\n",
+      "models/gemini-2.5-flash-preview-tts\n",
+      "models/gemini-2.5-pro-preview-tts\n",
+      "models/learnlm-2.0-flash-experimental\n",
+      "models/gemma-3-1b-it\n",
+      "models/gemma-3-4b-it\n",
+      "models/gemma-3-12b-it\n",
+      "models/gemma-3-27b-it\n",
+      "models/gemma-3n-e4b-it\n",
+      "models/gemma-3n-e2b-it\n",
+      "models/gemini-flash-latest\n",
+      "models/gemini-flash-lite-latest\n",
+      "models/gemini-pro-latest\n",
+      "models/gemini-2.5-flash-lite\n",
+      "models/gemini-2.5-flash-image-preview\n",
+      "models/gemini-2.5-flash-image\n",
+      "models/gemini-2.5-flash-preview-09-2025\n",
+      "models/gemini-2.5-flash-lite-preview-09-2025\n",
+      "models/gemini-robotics-er-1.5-preview\n",
+      "models/gemini-2.5-computer-use-preview-10-2025\n",
+      "models/embedding-001\n",
+      "models/text-embedding-004\n",
+      "models/gemini-embedding-exp-03-07\n",
+      "models/gemini-embedding-exp\n",
+      "models/gemini-embedding-001\n",
+      "models/aqa\n",
+      "models/imagen-4.0-generate-preview-06-06\n",
+      "models/imagen-4.0-ultra-generate-preview-06-06\n",
+      "models/imagen-4.0-generate-001\n",
+      "models/imagen-4.0-ultra-generate-001\n",
+      "models/imagen-4.0-fast-generate-001\n",
+      "models/veo-2.0-generate-001\n",
+      "models/veo-3.0-generate-001\n",
+      "models/veo-3.0-fast-generate-001\n",
+      "models/veo-3.1-generate-preview\n",
+      "models/veo-3.1-fast-generate-preview\n",
+      "models/gemini-2.0-flash-live-001\n",
+      "models/gemini-live-2.5-flash-preview\n",
+      "models/gemini-2.5-flash-live-preview\n",
+      "models/gemini-2.5-flash-native-audio-latest\n",
+      "models/gemini-2.5-flash-native-audio-preview-09-2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in genai.list_models():\n",
+    "    print(model.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9c3bb70e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "This image is a screenshot of a development environment, likely a Jupyter Notebook or similar, displaying both code and an image output.\n",
+      "\n",
+      "The screenshot is predominantly dark-themed, with distinct sections:\n",
+      "\n",
+      "1.  **Top Section (Code):**\n",
+      "    *   Displays Python code related to image handling using the PIL (Pillow) library.\n",
+      "    *   Lines include `from PIL import Image`, `image_filename = create_and_save_image(titles[1], extra=\"fundo branco\")`, `print(image_filename)`, and `Image.open(image_filename)`.\n",
+      "    *   A green checkmark and \"15.6s\" indicate successful execution of the code.\n",
+      "    *   The `extra=\"fundo branco\"` suggests the image was created with a white background.\n",
+      "\n",
+      "2.  **Middle Section (Text/URL):**\n",
+      "    *   Shows a long URL that points to an image resource.\n",
+      "    *   Below the URL, there's a filename displayed: \"Frango Grelhado ao Molho de Mel e Salada Mezclun.png\". This translates from Portuguese to \"Grilled Chicken with Honey Sauce and Mezclun Salad.png\", which directly describes the content of the image below.\n",
+      "\n",
+      "3.  **Bottom Section (Main Image - Food):**\n",
+      "    *   This is a high-resolution photograph of a meal, featuring grilled chicken and a side salad, presented on a stark white plate against a bright white background.\n",
+      "    *   **Left Side (Chicken):** Two pieces of grilled chicken, likely drumsticks or thighs, are prominently displayed. They are generously coated in a glossy, reddish-brown sauce, possibly the \"honey sauce\" mentioned in the filename. The sauce has darker, almost charred, stripes, indicative of grilling. Both chicken pieces are garnished with thin, vibrant green chives or scallion strands. A small pool of the sauce rests on the white plate beneath the chicken.\n",
+      "    *   **Right Side (Salad):** A fresh and colorful salad, identified as \"Mezclun Salad,\" is next to the chicken. It features various types of lettuce, including bright green leaves and darker, reddish-purple leaves, giving it a mixed appearance. The salad also contains smaller, lighter-colored pieces, possibly nuts, croutons, or small pieces of cheese, mixed in with a light dressing.\n",
+      "    *   The overall presentation is clean and appealing, with bright, even lighting that highlights the textures and colors of the food.\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Quitting...\n",
+      "Bye-bye!\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
-    "model = genai.GenerativeModel(\"gemini-pro-vision\")\n",
+    "model = genai.GenerativeModel(\"gemini-2.5-flash\")\n",
     "while True:\n",
     "    prompt = input(\"Ask something: \")\n",
     "    if prompt.lower() not in [\"exit\", \"bye\", \"quit\"]:\n",
